[metadata]
name = Proggames
version = attr: proggames.__version__
author = Ferez
author_email = minh9a4@gmail.com
description = Lightweight framework for organizing Programing games Contests
long_description = file: README.rst
license_file = LICENSE

[options]
python_requires = >= 3.7
packages = find:
install_requires =
    click >= 5.1


[tool:pytest]
testpaths = tests